--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;700&display=swap">
-    <title>Document</title>
+    <title>Breaking Bad</title>
 </head>
 
 <body>
